--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Volodymyr Kuzmin - Full Stack Web Developer"
     />
     <title>Volodymyr Kuzmin - Full Stack Web Developer</title>
+    <meta name="google-site-verification" content="sMGij6eraT4nF5gJjHJlW_O97Xcp2TtpqJN-xRTei2w" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
