--- a/public/index.html
+++ b/public/index.html
@@ -4,22 +4,26 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-80SQRQ851P"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
+      function gtag() { dataLayer.push(arguments); }
       gtag('js', new Date());
 
       gtag('config', 'G-80SQRQ851P');
     </script>
-    
+
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Volodymyr Kuzmin - Full Stack Web Developer"
-    />
-    <title>Volodymyr Kuzmin - Full Stack Web Developer</title>
+    <meta name="description" content="Volodymyr Kuzmin - Full Stack Web Developer" />
     <meta name="google-site-verification" content="sMGij6eraT4nF5gJjHJlW_O97Xcp2TtpqJN-xRTei2w" />
+
+    <meta property="og:title" content="Volodymyr Kuzmin">
+    <meta property="og:description" content="Personal page of Vladimir Kuzmin - Full Stack Web Developer">
+    <meta property="og:image" content="./img/preview.jpg">
+    <meta property="og:url" content="https://volodymyr-kuzmin.pp.ua/">
+    <meta property="og:type" content="website">
+
+    <title>Volodymyr Kuzmin - Full Stack Web Developer</title>    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
