--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 
     <meta property="og:title" content="Volodymyr Kuzmin">
     <meta property="og:description" content="Personal page of Vladimir Kuzmin - Full Stack Web Developer">
-    <meta property="og:image" content="./img/preview.jpg">
+    <meta property="og:image" content="https://volodymyr-kuzmin.pp.ua/img/preview.jpg">
     <meta property="og:url" content="https://volodymyr-kuzmin.pp.ua/">
     <meta property="og:type" content="website">
 
