--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
 
       gtag('config', 'G-80SQRQ851P');
     </script>
+    <meta name="google-site-verification" content="sMGij6eraT4nF5gJjHJlW_O97Xcp2TtpqJN-xRTei2w" />
 
     <meta charset="utf-8" />
     <link rel="icon" href="./favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Volodymyr Kuzmin - Full Stack Web Developer" />
-    <meta name="google-site-verification" content="sMGij6eraT4nF5gJjHJlW_O97Xcp2TtpqJN-xRTei2w" />
+    <meta name="theme-color" content="#0a192f" />
+
+    <title>Volodymyr Kuzmin - Full Stack Web Developer</title>
+    <meta name="description"
+      content="I am Full Stack Developer specializing in creating (and sometimes designing) web applications, I approach my work with both enthusiasm and pleasure!" />
 
     <meta property="og:title" content="Volodymyr Kuzmin">
     <meta property="og:description" content="Personal page of Vladimir Kuzmin - Full Stack Web Developer">
@@ -23,7 +26,28 @@
     <meta property="og:url" content="https://volodymyr-kuzmin.pp.ua/">
     <meta property="og:type" content="website">
 
-    <title>Volodymyr Kuzmin - Full Stack Web Developer</title>    
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Volodymyr Kuzmin",
+        "image": "img/foto.webp",
+        "email": "mailto:vlkzmn@gmail.com",
+        "telephone": "+380633485206",
+        "url": "https://volodymyr-kuzmin.pp.ua",
+        "hasOccupation": {
+          "@type": "Occupation",
+          "name": "Web Developer",
+          "skills": "HTML, CSS, Sass, JavaScript, TypeScript, React, Redux, Node.js, SQL, Git",
+          "occupationalCategory": {
+            "@type": "CategoryCode",
+            "codeValue": "15-1254.00",
+            "name": "Web Developers",
+            "url": "https://www.onetonline.org/link/summary/15-1254.00"
+          }
+        }
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
