add web site name for google snippet

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
     <meta name="description"
       content="I am Full Stack Developer specializing in creating (and sometimes designing) web applications, I approach my work with both enthusiasm and pleasure!" />
 
+    <meta property="og:site_name" content="Volodymyr Kuzmin">
     <meta property="og:title" content="Volodymyr Kuzmin">
     <meta property="og:description" content="Personal page of Vladimir Kuzmin - Full Stack Web Developer">
     <meta property="og:image" content="https://volodymyr-kuzmin.pp.ua/img/preview.jpg">
@@ -76,6 +77,11 @@
     </script>
   </head>
   <body>
+    <div itemscope itemtype="https://schema.org/WebSite">
+      <meta itemprop="url" content="https://volodymyr-kuzmin.pp.ua/"/>
+      <meta itemprop="name" content="Volodymyr Kuzmin"/>
+    </div>
+
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
